# string-art-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: toolchain-windows.cmake
src/: CMakeLists.txt  main.cpp
